RESOLVED FIXED158604
Hairline borders do not show up on 3x displays.
https://bugs.webkit.org/show_bug.cgi?id=158604
Summary Hairline borders do not show up on 3x displays.
alan
Reported 2016-06-09 20:24:42 PDT
Created attachment 280985 [details] Test reduction border: 0.34 solid green; should draw a hairline border on 3x displays. See the attached test case.
Attachments
Test reduction (446 bytes, text/html)
2016-06-09 20:24 PDT, alan
no flags
Patch (5.86 KB, patch)
2016-06-09 20:48 PDT, alan
no flags
alan
Comment 1 2016-06-09 20:25:12 PDT
alan
Comment 2 2016-06-09 20:48:35 PDT
WebKit Commit Bot
Comment 3 2016-06-09 22:25:41 PDT
Comment on attachment 280986 [details] Patch Clearing flags on attachment: 280986 Committed r201907: <http://trac.webkit.org/changeset/201907>
WebKit Commit Bot
Comment 4 2016-06-09 22:25:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.